--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,33 +2,41 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-</head>
-<body>
-    <style>
-        .profile-header {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        #profile-picture {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%; /* Deixa a imagem redonda */
-            object-fit: cover; /* Garante que a imagem preencha o círculo */
-            background-color: #f0f0f0; /* Cor de fundo enquanto carrega */
-        }
-    </style>
-
-    <h1>Seu Dashboard</h1>
-
-    <div class="profile-header">
-        <img id="profile-picture" src="" alt="Foto de Perfil">
-        <div id="user-info">Carregando dados...</div>
-    </div>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <button id="logout-button">Sair</button>
+    <link rel="stylesheet" href="static/style.css">
+</head>
+<body class="dashboard-body">
+
+    <div class="dashboard-container">
+        <header class="dashboard-header">
+            <h1>Dashboard</h1>
+            <button id="logout-button" class="dashboard-logout-btn">
+                <i class="fas fa-sign-out-alt"></i> Sair
+            </button>
+        </header>
+
+        <main class="dashboard-main">
+            <div class="profile-card">
+                <div class="profile-card-header">
+                    <img id="profile-picture" src="" alt="Foto de Perfil">
+                </div>
+                <div class="profile-card-body">
+                    <div id="user-info">
+                        <p>Carregando dados...</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
