--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -41,6 +41,9 @@
                 <button id="logout-button" class="profile-action-btn">
                     <i class="fas fa-sign-out-alt"></i> Sair
                 </button>
+                <button id="edit-profile-btn" class="profile-action-btn">
+                    <i class="fas fa-pencil-alt"></i> Editar Perfil
+                </button>
             </div>
         </section>
 
@@ -71,6 +74,35 @@
         </section>
 
     </main>
+
+    <div id="edit-profile-modal" class="modal-overlay hidden">
+    <div class="modal-content">
+        <header class="modal-header">
+            <h2>Editar Perfil</h2>
+            <button id="close-modal-btn" class="close-btn">&times;</button>
+        </header>
+        <main class="modal-body">
+            <form id="edit-profile-form">
+                <div class="form-group">
+                    <label for="edit-name">Nome</label>
+                    <input type="text" id="edit-name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="edit-nick">Nick</label>
+                    <input type="text" id="edit-nick" name="nick" required>
+                    <small>Somente letras minúsculas e números, sem espaços ou caracteres especiais.</small>
+                </div>
+                <div id="form-error-message" class="error-text"></div>
+            </form>
+        </main>
+        <footer class="modal-footer">
+            <button type="submit" form="edit-profile-form" id="save-profile-btn" class="save-btn">
+                <i class="fas fa-check"></i> Salvar
+            </button>
+        </footer>
+    </div>
+</div>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
